Created table and entity User
